@@ -1,0 +1,45 @@
+﻿using System;
+using Microsoft.EntityFrameworkCore.Migrations;
+using NetTopologySuite.Geometries;
+using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;
+
+namespace Ermes.Migrations
+{
+    public partial class Stations_Added : Migration
+    {
+        protected override void Up(MigrationBuilder migrationBuilder)
+        {
+            migrationBuilder.CreateTable(
+                name: "stations",
+                columns: table => new
+                {
+                    Id = table.Column<int>(nullable: false)
+                        .Annotation("Npgsql:ValueGenerationStrategy", NpgsqlValueGenerationStrategy.IdentityByDefaultColumn),
+                    SensorServiceId = table.Column<string>(nullable: false),
+                    Name = table.Column<string>(nullable: true),
+                    Owner = table.Column<string>(nullable: true),
+                    Brand = table.Column<string>(nullable: true),
+                    StationType = table.Column<string>(nullable: true),
+                    Location = table.Column<Point>(nullable: false),
+                    Altitude = table.Column<decimal>(nullable: false),
+                    CreationTime = table.Column<DateTime>(nullable: false)
+                },
+                constraints: table =>
+                {
+                    table.PrimaryKey("PK_stations", x => x.Id);
+                });
+
+            migrationBuilder.CreateIndex(
+                name: "IX_stations_SensorServiceId",
+                table: "stations",
+                column: "SensorServiceId",
+                unique: true);
+        }
+
+        protected override void Down(MigrationBuilder migrationBuilder)
+        {
+            migrationBuilder.DropTable(
+                name: "stations");
+        }
+    }
+}
