@@ -1,6 +1,7 @@
 Ver.
 --------------------------------
 - Feature - Fix create sensor function, Id prop added to sensorDto (#145)
+- Feature - Station entity added (migration added)(#145)
 
 Ver. 4.12.0 - 2023-06-23
 --------------------------------
